<resources>
    <string name="app_name">Navigation Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button3">Display Image 3</string>
    <string name="button2">Display Image 2</string>
    <string name="button1">Display Image 1</string>
    <string name="first_image">first-image</string>
    <string name="second_image">second-image</string>
    <string name="third_image">third-image</string>
    <string name="textviewfrag2">Image 1</string>
</resources>